--- a/css/main.css
+++ b/css/main.css
@@ -163,6 +163,7 @@
         .chat-logo {
             visibility: visible;
             height: 100px !important;
+            margin-top: 10%;
             text-align: center;
             float: right;
             margin-right: 10px;
@@ -186,6 +187,7 @@
         .chat-logo {
             visibility: visible;
             height: 100px !important;
+            margin-top: 10%;
             text-align: center;
             float: right;
             margin-right: 10px;
